[tool.poetry]
name = "infocasasproject"
version = "0.1.0"
description = ""
authors = ["Danny Rivadeneira <drivadeneira@grupocentrico.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
pytest = "^7.3.0"
httpretty = "^1.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

